fix(app): horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ a {
 */
 abbr[title] {
   text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted; /* 2 */
   border-bottom: none; /* 1 */
 }
 
@@ -373,7 +374,8 @@ main {
 img {
   display: block;
   height: auto;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   max-width: 100%;
 }
 
@@ -411,7 +413,8 @@ textarea {
   white-space: nowrap;
   border: 0;
   clip: rect(0 0 0 0);
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
 }
 
 /* Blocks */
@@ -478,6 +481,9 @@ textarea {
 }
 .custom-input__field:hover, .custom-input__field:focus-visible {
   border-color: #475CD6;
+}
+.custom-input__field::-moz-placeholder {
+  color: #8B8B8B;
 }
 .custom-input__field::placeholder {
   color: #8B8B8B;
@@ -1955,6 +1961,7 @@ textarea {
 
 .reviews {
   margin: 0 0 100px 0;
+  overflow: hidden;
 }
 @media (max-width: 1023px) {
   .reviews {
@@ -2035,9 +2042,6 @@ textarea {
   list-style: none;
   gap: 16px;
 }
-.reviews__list::-webkit-scrollbar {
-  display: none;
-}
 @media (max-width: 1023px) {
   .reviews__list {
     display: flex;
@@ -2045,6 +2049,9 @@ textarea {
     overflow-x: scroll;
     margin: 0 -32px;
     padding: 0 32px;
+  }
+  .reviews__list::-webkit-scrollbar {
+    display: none;
   }
 }
 @media (max-width: 767px) {
@@ -2634,6 +2641,4 @@ textarea {
 }
 .footer__bottom-link:hover, .footer__bottom-link:focus-visible {
   color: #475CD6;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
